# wav2vec2_stt_python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements-build.txt  setup.py
.github/workflows/: build.yml
building/: build-wheel-dockcross.sh
native/: CMakeLists.txt  wav2vec2_stt_lib.cpp  wav2vec2_stt_lib.h
tests/: test_decode.py
wav2vec2_stt/: __init__.py  __main__.py  wrapper.py
